welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:6: error: not found: value setCouleur
	setCouleur(Color.YELLOW);
        ^FlowerPot:8: error: not found: value setCouleur
	setCouleur(c);
        ^FlowerPot:9: error: not found: value avancer
	avancer();
        ^FlowerPot:11: error: not found: value reculer
	reculer();
        ^FlowerPot:12: error: not found: value reculer
	reculer();
        ^FlowerPot:13: error: not found: value marcher
	marcher();
        ^FlowerPot:14: error: not found: value avancer
	avancer();
        ^FlowerPot:16: error: not found: value avancer
	avancer();
        ^FlowerPot:18: error: not found: value reculer
	reculer();
        ^FlowerPot:19: error: not found: value reculer
	reculer();
        ^FlowerPot:20: error: not found: value marcher
	marcher();
        ^FlowerPot:21: error: not found: value avancer
	avancer();
        ^FlowerPot:25: error: not found: value avancer
	avancer();
        ^FlowerPot:27: error: not found: value avancer
	avancer();
        ^FlowerPot:28: error: not found: value avancer
	avancer();
        ^FlowerPot:29: error: not found: value avancer
	avancer();
        ^FlowerPot:30: error: not found: value avancer
	avancer();
        ^FlowerPot:33: error: not found: value avancer
	avancer();
        ^FlowerPot:34: error: not found: value avancer
	avancer();
        ^FlowerPot:36: error: not found: value avancer
	avancer();
        ^FlowerPot:37: error: not found: value avancer
	avancer();
        ^FlowerPot:39: error: not found: value reculer
	reculer();
        ^FlowerPot:40: error: not found: value reculer
	reculer();
        ^FlowerPot:42: error: not found: value reculer
	reculer();
        ^FlowerPot:43: error: not found: value reculer
	reculer();
        ^FlowerPot:46: error: not found: value reculer
	reculer();
        ^FlowerPot:47: error: not found: value reculer
	reculer();
        ^FlowerPot:48: error: not found: value reculer
	reculer();
        ^FlowerPot:49: error: not found: value reculer
	reculer();
        ^FlowerPot:51: error: not found: value reculer
	reculer();
        ^