welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def marquer() {
	baisseBrosse();
	leveBrosse();
}
def Flower(c:Color) {
	setCouleur(Color.YELLOW);
	marquer();
	setCouleur(c);
	avancer();
	marquer();
	reculer();
	reculer();
	marcher();
	avancer();
	gauche();
	avancer();
	marquer();
	reculer();
	reculer();
	marcher();
	avancer();
	droite();
}
def Dessin() {
	avancer();
	Flower(Color.RED);
	avancer();
	avancer();
	avancer();
	avancer();
	Flower(Color.CYAN);
	droite();
	avancer();
	avancer();
	droite();
	avancer();
	avancer();
	Flower(Color.ORANGE);
	reculer();
	reculer();
	droite();
	reculer();
	reculer();
	Flower(Color.GREEN);
	droite();
	reculer();
	reculer();
	reculer();
	reculer();
	Flower(Color.PINK);
	reculer();
}
Dessin();